@@ -1126,6 +1126,7 @@ WIDGET_DEFAULT = {
         "font_color_debugging": "#FFFFFF",
         "bkg_color_debugging": "#66111111",
         "auto_hide_if_not_available": True,
+        "maximum_display_duration": -1,
         "column_index_pace_notes": 1,
         "column_index_comments": 2,
         "column_index_debugging": 3,
@@ -1973,6 +1974,7 @@ WIDGET_DEFAULT = {
         "font_color_debugging": "#FFFFFF",
         "bkg_color_debugging": "#66111111",
         "auto_hide_if_not_available": True,
+        "maximum_display_duration": -1,
         "column_index_track_notes": 1,
         "column_index_comments": 2,
         "column_index_debugging": 3,
